[gd_scene load_steps=3 format=3 uid="uid://cqx3f4ayahjmc"]

[ext_resource type="Script" path="res://scripts/main_pause.gd" id="1_diw61"]
[ext_resource type="SystemFont" uid="uid://cuht55tbb5ci8" path="res://assets/styles/pixel_font.tres" id="1_pbkxf"]

[node name="MainPause" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 360
theme_override_constants/margin_top = 120
theme_override_constants/margin_right = 360
theme_override_constants/margin_bottom = 120
script = ExtResource("1_diw61")

[node name="Panel" type="Panel" parent="."]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 36
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 36
theme_override_constants/margin_bottom = 24

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 340

[node name="Title" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("1_pbkxf")
theme_override_font_sizes/font_size = 36
text = "3D Demo"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_constants/separation = 20

[node name="Continue" type="Button" parent="Panel/MarginContainer/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(180, 60)
layout_mode = 2
text = "Continue"

[node name="Options" type="Button" parent="Panel/MarginContainer/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(180, 60)
layout_mode = 2
text = "Options"

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="ExitMenu" type="Button" parent="Panel/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(120, 60)
layout_mode = 2
text = "Exit to Menu"

[node name="ExitDesktop" type="Button" parent="Panel/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(120, 60)
layout_mode = 2
text = "Exit to Desktop"

[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/VBoxContainer/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/ExitMenu" to="." method="_on_exit_menu_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/ExitDesktop" to="." method="_on_exit_desktop_pressed"]
